--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -66,7 +67,7 @@
                             
                             <p class="section-subheading text-muted text-center">Desenvolvedor Front-End, graduado em Sistemas de Informação na Faculdade Unisuz em Suzano/SP,</p>
                             <p class="section-subheading text-muted text-center mt-n3 d-none d-lg-block d-print-block">Buscando sempre me atualizar com os diversos frameworks existentes e procurando ter uma grande vivência com desenvolvimento mobile  e sempre aperfeiçoando os meus conhecimentos.</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jhon-sousa-294983116/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                         <p class="text-center mb-5 mt-n3">Aqui estão algumas ferramentas que utilizo.</p>
                         <div class="customer-logos slider d-print-none">
@@ -234,12 +235,10 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © Izippers 2020</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jhon-sousa-294983116/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-right mb-3">
-                        <a class="mr-3" href="https://api.whatsapp.com/send?phone=5511981638886&text=Ol%C3%A1,%20Jhon!%20Tudo%20bem?">Jhon Sousa - (11) 98163-8886</a>
+                        <a class="mr-3" href="https://api.whatsapp.com/send?phone=5511981638886&text=Ol%C3%A1,%20Jhon!%20Tudo%20bem?" target="_blank">Jhon Sousa - (11) 98163-8886</a>
                     </div>
                 </div>
             </div>
