--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <footer class="footer bg-light mt-n5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">Copyright © Izippers 2020</div>
+                    <div class="col-lg-4 text-lg-left">Copyright © Izippers 2021</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jhon-sousa-294983116/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
@@ -354,14 +354,14 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Bikcraft</h2>
-                                    <p class="item-intro text-muted"> teste </p>
+                                    <p class="item-intro text-muted">javaScript/jQuery</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft1.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft2.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft3.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft4.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft5.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft6.jpeg" alt="" />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Projeto criado com base em estudos via Origamid com implementação javaScript/jQuery</p>
                                     <button class="btn btn-danger" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Fechar
@@ -387,22 +387,21 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">little invest</h2>
+                                    <p class="item-intro text-muted"> Adobe XD</p>
 				    <img class="img-fluid" src="assets/img/Project/AdobeXD/AdobeXD1.jpeg" alt="" />
 				    <img class="img-fluid" src="assets/img/Project/AdobeXD/AdobeXD2.jpeg" alt="" />
 				    <img class="img-fluid" src="assets/img/Project/AdobeXD/AdobeXD3.jpeg" alt="" />
 				    <img class="img-fluid" src="assets/img/Project/AdobeXD/AdobeXD4.jpeg" alt="" />
 				    <img class="img-fluid" src="assets/img/Project/AdobeXD/AdobeXD5.jpeg" alt="" />
-				    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-inline">
-                                        <li>Date: January 2020</li>
-                                        <li>Client: Southwest</li>
-                                        <li>Category: Website Design</li>
-                                    </ul>
-                                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+				    <p>Projeto criado com base em estudos via Origamid com Adobe XD</p>
+                                    <button class="btn btn-danger" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
-                                        Close Project
+                                        Fechar
+                                    </button>
+                                    <button class="btn btn-outline-info mr-1" type="button">
+                                        <i class="fas fa-check mr-1"></i>
+                                        <a href="http://bikcraft.gearhostpreview.com/" target="_blank">Projeto</a>
                                     </button>
                                 </div>
                             </div>
