--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
                                     </button>
                                     <button class="btn btn-outline-info mr-1" type="button">
                                         <i class="fas fa-check mr-1"></i>
-                                        <a href="nohjsousa.github.io/projetosass-bikcraft" target="_blank">Projeto</a>                                    </button>
+                                        <a href="https://nohjsousa.github.io/projetosass-bikcraft" target="_blank">Projeto</a>
+				    </button>
                                 </div>
                             </div>
                         </div>
