--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-lg">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/portifolio.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/jhon.jpeg" alt="" />
                             <h4>Jhon Sousa</h4>
                             <p class="text-muted">Desenvolvedor Front-End</p>
                             
@@ -137,7 +137,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/Project/FlexBox/flexBox1.jpeg" alt="" />
+                                <img class="img-fluid" src="assets/img/Project/FlexBox/flexBox.jpg" alt="" />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Flexbox</div>
@@ -189,7 +189,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Bikcraft</div>
-                                <div class="portfolio-caption-subheading text-muted">Desenvolvido em JavaScript/jQuery</div>
+                                <div class="portfolio-caption-subheading text-muted">Desenvolvido em Sass</div>
                             </div>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                             <img class="img-fluid d-block mx-auto py-2" src="assets/img/whats.png" width="60" alt=""/>
                         </a>
                         <h3 class="section-subheading text-muted text-center my-5">Vamos conversar ? clique no icone do whatsapp.</h3> 
-                        <img class="img-fluid rounded-circle d-block mx-auto mt-n4" src="assets/img/portifolio.jpg" width="50" alt=""/>
+                        <img class="img-fluid rounded-circle d-block mx-auto mt-n4" src="assets/img/jhon.jpeg" width="50" alt=""/>
                     </div>
                 </div>
             </div>
@@ -235,7 +235,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-left">Copyright © Izippers 2021</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/jhon-sousa-294983116/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sousajhon/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-right mb-3">
                         <a class="mr-3" href="https://api.whatsapp.com/send?phone=5511981638886&text=Ol%C3%A1,%20Jhon!%20Tudo%20bem?" target="_blank">Jhon Sousa - (11) 98163-8886</a>
@@ -268,7 +268,7 @@
                                     </button>
                                     <button class="btn btn-outline-info mr-1" type="button">
                                         <i class="fas fa-check mr-1"></i>
-                                        <a href="#" target="_blank">Projeto</a>
+                                        <a href="https://nohjsousa.github.io/Css-com-FlexBox/" target="_blank">Projeto</a>
                                     </button>
                                 </div>
                             </div>
@@ -334,7 +334,7 @@
                                     </button>
                                     <button class="btn btn-outline-info mr-1" type="button">
                                         <i class="fas fa-check mr-1"></i>
-                                        <a href="#" target="_blank">Projeto</a>
+                                        <a href="https://nohjsousa.github.io/Projeto-SASS-Le-Scone" target="_blank">Projeto</a>
                                     </button>
                                 </div>
                             </div>
@@ -354,21 +354,21 @@
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Bikcraft</h2>
-                                    <p class="item-intro text-muted">javaScript/jQuery</p>
+                                    <p class="item-intro text-muted">Projeto Sass-Bikcraft</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft1.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft2.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft3.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft4.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft5.jpeg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/Project/bikcraft/Bikcraft6.jpeg" alt="" />
-                                    <p>Projeto criado com base em estudos via Origamid com implementação javaScript/jQuery</p>
+                                    <p>Projeto criado com base em estudos via Origamid com implementação Sass</p>
                                     <button class="btn btn-danger" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Fechar
                                     </button>
                                     <button class="btn btn-outline-info mr-1" type="button">
                                         <i class="fas fa-check mr-1"></i>
-                                        <a href="https://nohjsousa.github.io/projetosass-bikcraft" target="_blank">Projeto</a>
+                                        <a href="https://nohjsousa.github.io/ProjetoSASS-Bikcraft/" target="_blank">Projeto</a>
 				    </button>
                                 </div>
                             </div>
@@ -399,10 +399,10 @@
                                         <i class="fas fa-times mr-1"></i>
                                         Fechar
                                     </button>
-                                    <button class="btn btn-outline-info mr-1" type="button">
+                                    <!--<button class="btn btn-outline-info mr-1" type="button">
                                         <i class="fas fa-check mr-1"></i>
                                         <a href="http://bikcraft.gearhostpreview.com/" target="_blank">Projeto</a>
-                                    </button>
+                                    </button>-->
                                 </div>
                             </div>
                         </div>
